towards LSP support